[package]
name = "bigbattle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
rand = "0.9.0-alpha.0"
random_name_generator = "0.3.6"
enum-derived = "0.8.2"
crossterm = "0.27.0"
clap = "4.5.3"